--- a/SewerEscape/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/SewerEscape/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -350,15 +350,18 @@ UdpMessagingSettings="\"Object\" "
 WmfMediaSettings="\"Object\" "
 K2Node_InputAction="\"Object\" "
 K2Node="\"Object\" "
+Button_BP_C="\"Object.Out Position\" "
+Button2_BP_C="\"Object.Out Position2\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+OpenAssetsAtExit=/Game/Assets/Buttons/Button2_BP.Button2_BP
 OpenAssetsAtExit=/Game/Assets/Buttons/Button_BP.Button_BP
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1586,11 +1589,17 @@ TcpMessagingSettings=EnhancedInputDeveloperSettings.Modifier Default Values.Inpu
 TemplateSequenceEditorSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Interact
 UdpMessagingSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Interact
 WmfMediaSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Interact
+StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup
+PropertyWrapper=PropertyWrapper.DefaultValueCategory.Out Position,PropertyWrapper.DefaultValueCategory.In Position
+Button_BP_C=PropertyWrapper.DefaultValueCategory.In Position,PropertyWrapper.DefaultValueCategory.In Position2,PropertyWrapper.DefaultValueCategory.Out Position,PropertyWrapper.DefaultValueCategory.Out Position2
+Button2_BP_C=PropertyWrapper.DefaultValueCategory.In Position2,PropertyWrapper.DefaultValueCategory.Out Position2
+K2Node_Timeline=PropertyWrapper.DefaultValueCategory.In Position,PropertyWrapper.DefaultValueCategory.In Position2,PropertyWrapper.DefaultValueCategory.Out Position,PropertyWrapper.DefaultValueCategory.Out Position2
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/Assets/Buttons/Button_BP
-MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
-MRUItem2=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem1=/Game/Assets/Buttons/Button2_BP
+MRUItem2=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
+MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -1957,7 +1966,8 @@ TextureImportSettings.ImportSettings=True
 UMGEditorProjectSettings.Compiler=True
 UMGEditorProjectSettings.Class Filtering=True
 UMGEditorProjectSettings.Designer=True
-UMGEditorProjectSettings.Designer =True
+UMGEditorProjectSettings.Designer=True
+UMGEditorProjectSettings.Designer=True
 AndroidRuntimeSettings.APK Packaging=True
 AndroidRuntimeSettings.App Bundles=True
 AndroidRuntimeSettings.Build=True
@@ -2067,11 +2077,45 @@ K2Node_InputAction.Input=True
 K2Node_Timeline.GraphNodeDetail=True
 Button_BP_C.TransformCommon=True
 Button_BP_C.Networking=True
+Button2_BP_C.Tick=True
+Button2_BP_C.Replication=True
+Button2_BP_C.Rendering=True
+Button2_BP_C.Collision=True
+Button2_BP_C.Actor=True
+Button2_BP_C.Input=True
+Button2_BP_C.HLOD=True
+Button2_BP_C.Physics=True
+Button2_BP_C.WorldPartition=True
+Button2_BP_C.Events=True
+Button_BP_C.Default=True
+StaticMeshComponent.MaterialParameters=True
+StaticMeshComponent.LOD=True
+StaticMeshComponent.RayTracing=True
+StaticMeshComponent.TextureStreaming=True
+StaticMeshComponent.Mobile=True
+StaticMeshComponent.AssetUserData=True
+StaticMeshComponent.Replication=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.ComponentTick=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
+PropertyWrapper.Events=True
+Button2_BP_C.TransformCommon=True
+Button2_BP_C.Networking=True
+UMGEditorProjectSettings.Designer =True
+Button2_BP_C.Default=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode=0
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=0
 /Game/Assets/Buttons/Button_BP.Button_BP=0
+/Game/Assets/Buttons/Button2_BP.Button2_BP=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2128,5 +2172,15 @@ GeneralProjectSettings=True
 InputSettings=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Assets/Buttons/Button2_BP.Button2_BP;
 RecentlyPlaced=/Game/Assets/Buttons/Button_BP.Button_BP;
+
+[DetailCategoriesAdvanced]
+StaticMeshComponent.MaterialParameters=True
+
+[SuppressableDialogs]
+ChangeVariableType_Warning=False
+
+[MessageLog]
+LastLogListing=BlueprintLog
 
