Added 5 buttons that activate 5 different doors.

--- a/SewerEscape/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/SewerEscape/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -350,8 +350,9 @@ UdpMessagingSettings="\"Object\" "
 WmfMediaSettings="\"Object\" "
 K2Node_InputAction="\"Object\" "
 K2Node="\"Object\" "
-Button_BP_C="\"Object.Out Position\" "
-Button2_BP_C="\"Object.Out Position2\" "
+Button_BP_C=
+Button2_BP_C=
+BillboardComponent="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -360,8 +361,24 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/Assets/Buttons/Button2_BP.Button2_BP
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+OpenAssetsAtExit=/Game/Assets/Buttons/Button3_BP.Button3_BP
+OpenAssetsAtExit=/Game/Assets/Buttons/Button4_BP.Button4_BP
+OpenAssetsAtExit=/Game/Assets/Buttons/Button5_BP.Button5_BP
+OpenAssetsAtExit=/Game/Assets/Buttons/Door_BP.Door_BP
 OpenAssetsAtExit=/Game/Assets/Buttons/Button_BP.Button_BP
+OpenAssetsAtExit=/Game/Assets/Buttons/Door2_BP.Door2_BP
+OpenAssetsAtExit=/Game/Assets/Buttons/Button2_BP.Button2_BP
+OpenAssetsAtExit=/Game/Assets/Buttons/Door3_BP.Door3_BP
+OpenAssetsAtExit=/Game/Assets/Buttons/Door4_BP.Door4_BP
+OpenAssetsAtExit=/Game/Assets/Buttons/Door5_BP.Door5_BP
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1589,17 +1606,42 @@ TcpMessagingSettings=EnhancedInputDeveloperSettings.Modifier Default Values.Inpu
 TemplateSequenceEditorSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Interact
 UdpMessagingSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Interact
 WmfMediaSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Interact
-StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup
-PropertyWrapper=PropertyWrapper.DefaultValueCategory.Out Position,PropertyWrapper.DefaultValueCategory.In Position
-Button_BP_C=PropertyWrapper.DefaultValueCategory.In Position,PropertyWrapper.DefaultValueCategory.In Position2,PropertyWrapper.DefaultValueCategory.Out Position,PropertyWrapper.DefaultValueCategory.Out Position2
-Button2_BP_C=PropertyWrapper.DefaultValueCategory.In Position2,PropertyWrapper.DefaultValueCategory.Out Position2
+StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.Out Position,PropertyWrapper.DefaultValueCategory.Out Position2,PropertyWrapper.DefaultValueCategory.In Position,PropertyWrapper.DefaultValueCategory.In Position2
+PropertyWrapper=PropertyWrapper.DefaultValueCategory.Out Position,PropertyWrapper.DefaultValueCategory.Out Position2,PropertyWrapper.DefaultValueCategory.In Position,PropertyWrapper.DefaultValueCategory.In Position2,StaticMeshComponent.Physics.ConstraintsGroup
+Button_BP_C=PropertyWrapper.DefaultValueCategory.Out Position,PropertyWrapper.DefaultValueCategory.Out Position2,PropertyWrapper.DefaultValueCategory.In Position,PropertyWrapper.DefaultValueCategory.In Position2,StaticMeshComponent.Physics.ConstraintsGroup
+Button2_BP_C=PropertyWrapper.DefaultValueCategory.In Position,PropertyWrapper.DefaultValueCategory.In Position2,PropertyWrapper.DefaultValueCategory.Out Position,PropertyWrapper.DefaultValueCategory.Out Position2,StaticMeshComponent.Physics.ConstraintsGroup
 K2Node_Timeline=PropertyWrapper.DefaultValueCategory.In Position,PropertyWrapper.DefaultValueCategory.In Position2,PropertyWrapper.DefaultValueCategory.Out Position,PropertyWrapper.DefaultValueCategory.Out Position2
+SceneComponent=
+Button3_BP_C=PropertyWrapper.DefaultValueCategory.In Position,PropertyWrapper.DefaultValueCategory.In Position2,PropertyWrapper.DefaultValueCategory.Out Position,PropertyWrapper.DefaultValueCategory.Out Position2,StaticMeshComponent.Physics.ConstraintsGroup
+Button4_BP_C=PropertyWrapper.DefaultValueCategory.In Position,PropertyWrapper.DefaultValueCategory.In Position2,PropertyWrapper.DefaultValueCategory.Out Position,PropertyWrapper.DefaultValueCategory.Out Position2,StaticMeshComponent.Physics.ConstraintsGroup
+Button5_BP_C=PropertyWrapper.DefaultValueCategory.In Position,PropertyWrapper.DefaultValueCategory.In Position2,PropertyWrapper.DefaultValueCategory.Out Position,PropertyWrapper.DefaultValueCategory.Out Position2,StaticMeshComponent.Physics.ConstraintsGroup
+Door_BP_C=PropertyWrapper.DefaultValueCategory.In Position,PropertyWrapper.DefaultValueCategory.In Position2,PropertyWrapper.DefaultValueCategory.Out Position,PropertyWrapper.DefaultValueCategory.Out Position2,StaticMeshComponent.Physics.ConstraintsGroup
+K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.Out Position,PropertyWrapper.DefaultValueCategory.Out Position2,PropertyWrapper.DefaultValueCategory.In Position,PropertyWrapper.DefaultValueCategory.In Position2,StaticMeshComponent.Physics.ConstraintsGroup
+K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.In Position,PropertyWrapper.DefaultValueCategory.In Position2,PropertyWrapper.DefaultValueCategory.Out Position,PropertyWrapper.DefaultValueCategory.Out Position2,StaticMeshComponent.Physics.ConstraintsGroup
+K2Node_CustomEvent=PropertyWrapper.DefaultValueCategory.Out Position,PropertyWrapper.DefaultValueCategory.Out Position2,PropertyWrapper.DefaultValueCategory.In Position,PropertyWrapper.DefaultValueCategory.In Position2,StaticMeshComponent.Physics.ConstraintsGroup
+BillboardComponent=PropertyWrapper.DefaultValueCategory.Out Position,PropertyWrapper.DefaultValueCategory.Out Position2,PropertyWrapper.DefaultValueCategory.In Position,PropertyWrapper.DefaultValueCategory.In Position2,StaticMeshComponent.Physics.ConstraintsGroup
+K2Node_InputAction=PropertyWrapper.DefaultValueCategory.Out Position,PropertyWrapper.DefaultValueCategory.Out Position2,PropertyWrapper.DefaultValueCategory.In Position,PropertyWrapper.DefaultValueCategory.In Position2,StaticMeshComponent.Physics.ConstraintsGroup
+Boor2_BP_C=PropertyWrapper.DefaultValueCategory.Out Position,PropertyWrapper.DefaultValueCategory.Out Position2,PropertyWrapper.DefaultValueCategory.In Position,PropertyWrapper.DefaultValueCategory.In Position2,StaticMeshComponent.Physics.ConstraintsGroup
+EdGraphNode=PropertyWrapper.DefaultValueCategory.Out Position,PropertyWrapper.DefaultValueCategory.Out Position2,PropertyWrapper.DefaultValueCategory.In Position,PropertyWrapper.DefaultValueCategory.In Position2,StaticMeshComponent.Physics.ConstraintsGroup
+EdGraphNode_Comment=PropertyWrapper.DefaultValueCategory.Out Position,PropertyWrapper.DefaultValueCategory.Out Position2,PropertyWrapper.DefaultValueCategory.In Position,PropertyWrapper.DefaultValueCategory.In Position2,StaticMeshComponent.Physics.ConstraintsGroup
+Door2_BP_C=
+Door3_BP_C=PropertyWrapper.DefaultValueCategory.Out Position,PropertyWrapper.DefaultValueCategory.Out Position2,PropertyWrapper.DefaultValueCategory.In Position,PropertyWrapper.DefaultValueCategory.In Position2,StaticMeshComponent.Physics.ConstraintsGroup
+Door4_BP_C=PropertyWrapper.DefaultValueCategory.Out Position,PropertyWrapper.DefaultValueCategory.Out Position2,PropertyWrapper.DefaultValueCategory.In Position,PropertyWrapper.DefaultValueCategory.In Position2,StaticMeshComponent.Physics.ConstraintsGroup
+Door5_BP_C=PropertyWrapper.DefaultValueCategory.In Position,PropertyWrapper.DefaultValueCategory.In Position2,PropertyWrapper.DefaultValueCategory.Out Position,PropertyWrapper.DefaultValueCategory.Out Position2,StaticMeshComponent.Physics.ConstraintsGroup
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Assets/Buttons/Button_BP
-MRUItem1=/Game/Assets/Buttons/Button2_BP
-MRUItem2=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
-MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem0=/Game/Assets/Buttons/Door5_BP
+MRUItem1=/Game/Assets/Buttons/Door4_BP
+MRUItem2=/Game/Assets/Buttons/Door3_BP
+MRUItem3=/Game/Assets/Buttons/Door2_BP
+MRUItem4=/Game/Assets/Buttons/Button2_BP
+MRUItem5=/Game/Assets/Buttons/Button_BP
+MRUItem6=/Game/Assets/Buttons/Door_BP
+MRUItem7=/Game/Assets/Buttons/Button5_BP
+MRUItem8=/Game/Assets/Buttons/Button4_BP
+MRUItem9=/Game/Assets/Buttons/Button3_BP
+MRUItem10=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
+MRUItem11=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -1968,6 +2010,7 @@ UMGEditorProjectSettings.Class Filtering=True
 UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
+UMGEditorProjectSettings.Designer=True
 AndroidRuntimeSettings.APK Packaging=True
 AndroidRuntimeSettings.App Bundles=True
 AndroidRuntimeSettings.Build=True
@@ -2108,14 +2151,139 @@ SceneComponent.Events=True
 PropertyWrapper.Events=True
 Button2_BP_C.TransformCommon=True
 Button2_BP_C.Networking=True
-UMGEditorProjectSettings.Designer =True
 Button2_BP_C.Default=True
+UMGEditorProjectSettings.Designer =True
+Button3_BP_C.Default=True
+Button3_BP_C.Tick=True
+Button3_BP_C.Replication=True
+Button3_BP_C.Rendering=True
+Button3_BP_C.Collision=True
+Button3_BP_C.Actor=True
+Button3_BP_C.Input=True
+Button3_BP_C.HLOD=True
+Button3_BP_C.Physics=True
+Button3_BP_C.WorldPartition=True
+Button3_BP_C.Events=True
+Button3_BP_C.TransformCommon=True
+Button3_BP_C.Networking=True
+Button4_BP_C.Default=True
+Button4_BP_C.Tick=True
+Button4_BP_C.Replication=True
+Button4_BP_C.Rendering=True
+Button4_BP_C.Collision=True
+Button4_BP_C.Actor=True
+Button4_BP_C.Input=True
+Button4_BP_C.HLOD=True
+Button4_BP_C.Physics=True
+Button4_BP_C.WorldPartition=True
+Button4_BP_C.Events=True
+Button4_BP_C.TransformCommon=True
+Button4_BP_C.Networking=True
+Button5_BP_C.Default=True
+Button5_BP_C.Tick=True
+Button5_BP_C.Replication=True
+Button5_BP_C.Rendering=True
+Button5_BP_C.Collision=True
+Button5_BP_C.Actor=True
+Button5_BP_C.Input=True
+Button5_BP_C.HLOD=True
+Button5_BP_C.Physics=True
+Button5_BP_C.WorldPartition=True
+Button5_BP_C.Events=True
+Button5_BP_C.TransformCommon=True
+Button5_BP_C.Networking=True
+Door_BP_C.Tick=True
+Door_BP_C.Replication=True
+Door_BP_C.Rendering=True
+Door_BP_C.Collision=True
+Door_BP_C.Actor=True
+Door_BP_C.Input=True
+Door_BP_C.HLOD=True
+Door_BP_C.Physics=True
+Door_BP_C.WorldPartition=True
+Door_BP_C.Events=True
+Door_BP_C.TransformCommon=True
+Door_BP_C.Networking=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+Door_BP_C.Default=True
+Boor2_BP_C.Default=True
+Boor2_BP_C.Tick=True
+Boor2_BP_C.Replication=True
+Boor2_BP_C.Rendering=True
+Boor2_BP_C.Collision=True
+Boor2_BP_C.Actor=True
+Boor2_BP_C.Input=True
+Boor2_BP_C.HLOD=True
+Boor2_BP_C.Physics=True
+Boor2_BP_C.WorldPartition=True
+Boor2_BP_C.Events=True
+Boor2_BP_C.TransformCommon=True
+Boor2_BP_C.Networking=True
+Door2_BP_C.Tick=True
+Door2_BP_C.Replication=True
+Door2_BP_C.Rendering=True
+Door2_BP_C.Collision=True
+Door2_BP_C.Actor=True
+Door2_BP_C.Input=True
+Door2_BP_C.HLOD=True
+Door2_BP_C.Physics=True
+Door2_BP_C.WorldPartition=True
+Door2_BP_C.Events=True
+Door2_BP_C.TransformCommon=True
+Door2_BP_C.Networking=True
+Door3_BP_C.Tick=True
+Door3_BP_C.Replication=True
+Door3_BP_C.Rendering=True
+Door3_BP_C.Collision=True
+Door3_BP_C.Actor=True
+Door3_BP_C.Input=True
+Door3_BP_C.HLOD=True
+Door3_BP_C.Physics=True
+Door3_BP_C.WorldPartition=True
+Door3_BP_C.Events=True
+Door3_BP_C.TransformCommon=True
+Door3_BP_C.Networking=True
+Door4_BP_C.Tick=True
+Door4_BP_C.Replication=True
+Door4_BP_C.Rendering=True
+Door4_BP_C.Collision=True
+Door4_BP_C.Actor=True
+Door4_BP_C.Input=True
+Door4_BP_C.HLOD=True
+Door4_BP_C.Physics=True
+Door4_BP_C.WorldPartition=True
+Door4_BP_C.Events=True
+Door4_BP_C.TransformCommon=True
+Door4_BP_C.Networking=True
+Door5_BP_C.Tick=True
+Door5_BP_C.Replication=True
+Door5_BP_C.Rendering=True
+Door5_BP_C.Collision=True
+Door5_BP_C.Actor=True
+Door5_BP_C.Input=True
+Door5_BP_C.HLOD=True
+Door5_BP_C.Physics=True
+Door5_BP_C.WorldPartition=True
+Door5_BP_C.Events=True
+Door5_BP_C.TransformCommon=True
+Door5_BP_C.Networking=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode=0
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=0
 /Game/Assets/Buttons/Button_BP.Button_BP=0
 /Game/Assets/Buttons/Button2_BP.Button2_BP=0
+/Game/Assets/Buttons/Boor2_BP.Boor2_BP=0
+/Game/Assets/Buttons/Button3_BP.Button3_BP=0
+/Game/Assets/Buttons/Button4_BP.Button4_BP=0
+/Game/Assets/Buttons/Button5_BP.Button5_BP=0
+/Game/Assets/Buttons/Door_BP.Door_BP=0
+/Game/Assets/Buttons/Door2_BP.Door2_BP=0
+/Game/Assets/Buttons/Door3_BP.Door3_BP=0
+/Game/Assets/Buttons/Door4_BP.Door4_BP=0
+/Game/Assets/Buttons/Door5_BP.Door5_BP=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2172,8 +2340,17 @@ GeneralProjectSettings=True
 InputSettings=True
 
 [PlacementMode]
-RecentlyPlaced=/Game/Assets/Buttons/Button2_BP.Button2_BP;
+RecentlyPlaced=/Game/Assets/Buttons/Door5_BP.Door5_BP;
+RecentlyPlaced=/Game/Assets/Buttons/Door4_BP.Door4_BP;
+RecentlyPlaced=/Game/Assets/Buttons/Door3_BP.Door3_BP;
+RecentlyPlaced=/Game/Assets/Buttons/Door2_BP.Door2_BP;
+RecentlyPlaced=/Game/Assets/Buttons/Boor2_BP.Boor2_BP;
+RecentlyPlaced=/Game/Assets/Buttons/Door_BP.Door_BP;
+RecentlyPlaced=/Game/Assets/Buttons/Button5_BP.Button5_BP;
+RecentlyPlaced=/Game/Assets/Buttons/Button4_BP.Button4_BP;
+RecentlyPlaced=/Game/Assets/Buttons/Button3_BP.Button3_BP;
 RecentlyPlaced=/Game/Assets/Buttons/Button_BP.Button_BP;
+RecentlyPlaced=/Game/Assets/Buttons/Button2_BP.Button2_BP;
 
 [DetailCategoriesAdvanced]
 StaticMeshComponent.MaterialParameters=True
