--- a/SewerEscape/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/SewerEscape/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -193,7 +193,7 @@ ContentBrowserTab2.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab2.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab2.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab2.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab2.SelectedPaths=/Game/Assets/UI
+ContentBrowserTab2.SelectedPaths=/Game/Assets/Enviornment
 ContentBrowserTab2.PluginFilters=
 ContentBrowserTab2.Favorites.SelectedPaths=
 ContentBrowserTab2.SelectedCollections=
@@ -366,10 +366,20 @@ ContentWidget="\"Object\" "
 Win_C="\"Object\" "
 UserWidget="\"Object\" "
 Menu_C="\"Object\" "
+PreviewMaterial="\"Object\" "
+Material="\"Object\" "
+MaterialInterface="\"Object\" "
+MaterialExpressionTime="\"Object\" "
+MaterialExpression="\"Object\" "
+MaterialExpressionMultiply="\"Object\" "
+MaterialExpressionConstant="\"Object\" "
+MaterialExpressionSine="\"Object\" "
+MaterialExpressionFrac="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=MaterialEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -384,8 +394,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/Assets/UI/Win.Win
-OpenAssetsAtExit=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap:PersistentLevel.ThirdPersonMap
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1497,6 +1505,8 @@ ExternalImagePicker.TimeStamp=2023.10.19-05.10.48
 ExternalImagePicker.LastCompileMethod=Unknown
 SequencerWidgets.TimeStamp=2023.10.19-05.10.50
 SequencerWidgets.LastCompileMethod=Unknown
+MaterialEditor.TimeStamp=2023.10.19-05.10.48
+MaterialEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -1645,20 +1655,21 @@ K2Node=PropertyWrapper.DefaultValueCategory.Out Position,PropertyWrapper.Default
 Menu_C=PropertyWrapper.DefaultValueCategory.Out Position,PropertyWrapper.DefaultValueCategory.Out Position2,PropertyWrapper.DefaultValueCategory.In Position,PropertyWrapper.DefaultValueCategory.In Position2,StaticMeshComponent.Physics.ConstraintsGroup
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Assets/UI/Win
-MRUItem1=/Game/Assets/UI/Menu
-MRUItem2=/Game/Assets/Buttons/Button_BP
-MRUItem3=/Game/Assets/Buttons/Door5_BP
-MRUItem4=/Game/Assets/Buttons/Door4_BP
-MRUItem5=/Game/Assets/Buttons/Door3_BP
-MRUItem6=/Game/Assets/Buttons/Door2_BP
-MRUItem7=/Game/Assets/Buttons/Button2_BP
-MRUItem8=/Game/Assets/Buttons/Door_BP
-MRUItem9=/Game/Assets/Buttons/Button5_BP
-MRUItem10=/Game/Assets/Buttons/Button4_BP
-MRUItem11=/Game/Assets/Buttons/Button3_BP
-MRUItem12=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
-MRUItem13=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem0=/Game/Assets/Enviornment/M_LightFlicker
+MRUItem1=/Game/Assets/UI/Win
+MRUItem2=/Game/Assets/UI/Menu
+MRUItem3=/Game/Assets/Buttons/Button_BP
+MRUItem4=/Game/Assets/Buttons/Door5_BP
+MRUItem5=/Game/Assets/Buttons/Door4_BP
+MRUItem6=/Game/Assets/Buttons/Door3_BP
+MRUItem7=/Game/Assets/Buttons/Door2_BP
+MRUItem8=/Game/Assets/Buttons/Button2_BP
+MRUItem9=/Game/Assets/Buttons/Door_BP
+MRUItem10=/Game/Assets/Buttons/Button5_BP
+MRUItem11=/Game/Assets/Buttons/Button4_BP
+MRUItem12=/Game/Assets/Buttons/Button3_BP
+MRUItem13=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
+MRUItem14=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -2030,6 +2041,7 @@ UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
+UMGEditorProjectSettings.Designer=True
 AndroidRuntimeSettings.APK Packaging=True
 AndroidRuntimeSettings.App Bundles=True
 AndroidRuntimeSettings.Build=True
@@ -2370,7 +2382,46 @@ Win_C.Accessibility=True
 Win_C.Rendering=True
 Win_C.Navigation=True
 ThirdPersonMap_C.Default=True
-UMGEditorProjectSettings.Designer =True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.PhysicalMaterialMask=True
+PreviewMaterial.Nanite=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.WorldPositionOffset=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionTime.MaterialExpressionTime=True
+MaterialExpressionTime.MaterialExpression=True
+MaterialExpressionMultiply.MaterialExpressionMultiply=True
+MaterialExpressionMultiply.MaterialExpression=True
+MaterialExpressionConstant.MaterialExpressionConstant=True
+MaterialExpressionConstant.MaterialExpression=True
+MaterialExpressionSine.MaterialExpressionSine=True
+MaterialExpressionSine.MaterialExpression=True
+MaterialExpressionFrac.MaterialExpression=True
+SpotLight.TransformCommon=True
+SpotLight.Light=True
+SpotLight.Rendering=True
+SpotLight.Lightmass=True
+SpotLight.Performance=True
+SpotLight.LightFunction=True
+SpotLight.Light Profiles=True
+SpotLight.DistanceFieldShadows=True
+SpotLight.RayTracing=True
+SpotLight.Tags=True
+SpotLight.Cooking=True
+SpotLight.HLOD=True
+SpotLight.Physics=True
+SpotLight.Networking=True
+SpotLight.WorldPartition=True
+SpotLight.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode=0
@@ -2389,6 +2440,7 @@ UMGEditorProjectSettings.Designer =True
 /Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap:PersistentLevel.ThirdPersonMap=0
 /Game/Assets/UI/Win.Win=0
 /Game/Assets/UI/Menu.Menu=1
+/Game/Assets/Enviornment/M_LightFlicker.M_LightFlicker=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2445,6 +2497,7 @@ GeneralProjectSettings=True
 InputSettings=True
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Game/Assets/Buttons/Door5_BP.Door5_BP;
 RecentlyPlaced=/Game/Assets/Buttons/Door4_BP.Door4_BP;
@@ -2562,4 +2615,173 @@ FrameNumberDisplayFormat=Seconds
 MovieRendererName=
 bAutoExpandNodesOnSelection=True
 TreeViewWidth=0.300000
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bShowGrid=False
+bHideUnrelatedNodes=False
+bUseUnsortedMenus=False
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=0
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bPlatformUsed[32]=0
+bPlatformUsed[33]=0
+bPlatformUsed[34]=0
+bPlatformUsed[35]=0
+bPlatformUsed[36]=0
+bPlatformUsed[37]=0
+bPlatformUsed[38]=0
+bPlatformUsed[39]=0
+bPlatformUsed[40]=0
+bPlatformUsed[41]=0
+bPlatformUsed[42]=0
+bPlatformUsed[43]=0
+bPlatformUsed[44]=0
+bPlatformUsed[45]=0
+bPlatformUsed[46]=0
+bPlatformUsed[47]=0
+bPlatformUsed[48]=0
+bPlatformUsed[49]=1
+bPlatformUsed[50]=0
+bPlatformUsed[51]=0
+bPlatformUsed[52]=0
+bPlatformUsed[53]=0
+bPlatformUsed[54]=0
+bPlatformUsed[55]=0
+bPlatformUsed[56]=0
+bPlatformUsed[57]=0
+bPlatformUsed[58]=0
+bPlatformUsed[59]=0
+bPlatformUsed[60]=0
+bPlatformUsed[61]=0
+bPlatformUsed[62]=0
+bPlatformUsed[63]=0
+bPlatformUsed[64]=0
+bPlatformUsed[65]=0
+bPlatformUsed[66]=0
+bPlatformUsed[67]=0
+bPlatformUsed[68]=0
+bPlatformUsed[69]=0
+bPlatformUsed[70]=0
+bPlatformUsed[71]=0
+bPlatformUsed[72]=0
+bPlatformUsed[73]=0
+bPlatformUsed[74]=0
+bPlatformUsed[75]=0
+bPlatformUsed[76]=0
+bPlatformUsed[77]=0
+bPlatformUsed[78]=0
+bPlatformUsed[79]=0
+bPlatformUsed[80]=0
+bPlatformUsed[81]=0
+bPlatformUsed[82]=0
+bPlatformUsed[83]=0
+bPlatformUsed[84]=0
+bPlatformUsed[85]=0
+bPlatformUsed[86]=0
+bPlatformUsed[87]=0
+bPlatformUsed[88]=0
+bPlatformUsed[89]=0
+bPlatformUsed[90]=0
+bPlatformUsed[91]=0
+bPlatformUsed[92]=0
+bPlatformUsed[93]=0
+bPlatformUsed[94]=0
+bPlatformUsed[95]=0
+bPlatformUsed[96]=0
+bPlatformUsed[97]=0
+bPlatformUsed[98]=0
+bPlatformUsed[99]=0
+bPlatformUsed[100]=0
+bPlatformUsed[101]=0
+bPlatformUsed[102]=0
+bPlatformUsed[103]=0
+bPlatformUsed[104]=0
+bPlatformUsed[105]=0
+bPlatformUsed[106]=0
+bPlatformUsed[107]=0
+bPlatformUsed[108]=0
+bPlatformUsed[109]=0
+bPlatformUsed[110]=0
+bPlatformUsed[111]=0
+bPlatformUsed[112]=0
+bPlatformUsed[113]=0
+bPlatformUsed[114]=0
+bPlatformUsed[115]=0
+bPlatformUsed[116]=0
+bPlatformUsed[117]=0
+bPlatformUsed[118]=0
+bPlatformUsed[119]=0
+bPlatformUsed[120]=0
+bPlatformUsed[121]=0
+bPlatformUsed[122]=0
+bPlatformUsed[123]=0
+bPlatformUsed[124]=0
+bPlatformUsed[125]=0
+bPlatformUsed[126]=0
+bPlatformUsed[127]=0
+bPlatformUsed[128]=0
+bPlatformUsed[129]=0
+bPlatformUsed[130]=0
+bPlatformUsed[131]=0
+bPlatformUsed[132]=0
+bPlatformUsed[133]=0
+bPlatformUsed[134]=0
+bPlatformUsed[135]=0
+bPlatformUsed[136]=0
+bPlatformUsed[137]=0
+bPlatformUsed[138]=0
+bPlatformUsed[139]=0
+bPlatformUsed[140]=0
+bPlatformUsed[141]=0
+bPlatformUsed[142]=0
+bPlatformUsed[143]=0
+bPlatformUsed[144]=0
+bPlatformUsed[145]=0
+bPlatformUsed[146]=0
+bPlatformUsed[147]=0
+bPlatformUsed[148]=0
+bPlatformUsed[149]=0
+bPlatformUsed[150]=0
+bPlatformUsed[151]=0
+bPlatformUsed[152]=0
+bPlatformUsed[153]=0
+bPlatformUsed[154]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
+bMaterialQualityUsed[3]=0
 
