Added Monster Stuff

--- a/SewerEscape/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/SewerEscape/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -238,7 +238,7 @@ LastLevel=/Game/GameAssets/Level/SewerLevel
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Mesh.VertexOverrideColor\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
+Object="\"Object\" "
 FbxImportUI="\"Object\" "
 NavModifierVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -246,7 +246,7 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BrushComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
-ActorComponent="\"Object\" "
+ActorComponent="\"Object\" \"Object.NavMovement.NavAgentProps\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 StaticMesh="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Mesh.VertexOverrideColor\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Mesh.VertexOverrideColor\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
@@ -312,10 +312,20 @@ ABP_Manny_C="\"Object\" "
 AnimInstance="\"Object\" "
 MaterialExpressionTextureSample="\"Object\" "
 MaterialExpressionTextureBase="\"Object\" "
+MaterialExpressionVectorParameter="\"Object\" "
+MaterialExpressionParameter="\"Object\" "
+BoneProxy="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=SkeletonEditor
+RecentAssetEditors=SkeletalMeshEditor
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
@@ -339,13 +349,7 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
+OpenAssetsAtExit=/Game/GameAssets/Animations/Whiteclown_N_Hallin_Skeleton.Whiteclown_N_Hallin_Skeleton
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1479,11 +1483,11 @@ MRUItem3=/Game/StarterContent/Maps/Advanced_Lighting
 MRUItem4=/Game/StarterContent/Maps/StarterMap
 
 [DetailCustomWidgetExpansion]
-StaticMesh=StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings,StaticMesh.ImportSettings.Mesh,StaticMesh.ImportSettings.Miscellaneous,StaticMesh.ImportSettings.Material,StaticMesh.ImportSettings.Transform,StaticMesh.ImportSettings.File Path
-MeshNaniteSettings=
+StaticMesh=StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings,StaticMesh.LOD0.StaticMeshSectionListNameLOD_0,StaticMesh.ImportSettings.Mesh,StaticMesh.ImportSettings.Miscellaneous,StaticMesh.ImportSettings.Material,StaticMesh.ImportSettings.Transform,StaticMesh.ImportSettings.File Path
+MeshNaniteSettings=StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings,StaticMesh.LOD0.StaticMeshSectionListNameLOD_0,StaticMesh.ImportSettings.Mesh,StaticMesh.ImportSettings.Miscellaneous,StaticMesh.ImportSettings.Material,StaticMesh.ImportSettings.Transform,StaticMesh.ImportSettings.File Path
 BP_ThirdPersonCharacter_C=BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.Collision.Collision,Enemy_AI_C.Physics.ConstraintsGroup
-CapsuleComponent=
-SkeletalMeshComponent=
+CapsuleComponent=BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.Collision.Collision,Enemy_AI_C.Physics.ConstraintsGroup
+SkeletalMeshComponent=BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.Collision.Collision,Enemy_AI_C.Physics.ConstraintsGroup
 PointLightComponent=BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.Collision.Collision
 StaticMeshActor=BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.Collision.Collision,Enemy_AI_C.Physics.ConstraintsGroup
 SceneComponent=BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.Collision.Collision,Enemy_AI_C.Physics.ConstraintsGroup
@@ -1503,36 +1507,36 @@ K2Node=BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacte
 K2Node_CustomEvent=BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.Collision.Collision,Enemy_AI_C.Physics.ConstraintsGroup
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/GameAssets/Materials/Large_T
-MRUItem1=/Game/GameAssets/Models/Large_Tunnel_Segments_Large_Tunnel_poly_001
-MRUItem2=/Game/GameAssets/Models/Large_Tunnel_Segments_Large_Tunnel_poly
-MRUItem3=/Game/GameAssets/Models/Large_Tunnel_Segments_Large_T_Intersection_Tunnel_Circle
-MRUItem4=/Game/GameAssets/Models/Large_Tunnel_Segments_Large_T_Intersection_Tunnel
-MRUItem5=/Game/GameAssets/Models/Large_Tunnel_Segments_Large_Short_Tunnel_Circle
-MRUItem6=/Game/GameAssets/Models/Large_Tunnel_Segments_Large_Short_Tunnel
-MRUItem7=/Game/GameAssets/Models/Large_Tunnel_Segments_Large_HalfShort_Tunnel
-MRUItem8=/Game/GameAssets/Models/Large_Tunnel_Segments_Large_Bars_poly
-MRUItem9=/Game/GameAssets/Models/Large_Tunnel_Segments_Large_90_Tunnel
-MRUItem10=/Game/GameAssets/Models/Large_Tunnel_Segments_4-Way_Large_Intersection_Segment
-MRUItem11=/Game/GameAssets/Models/Bars
-MRUItem12=/Game/GameAssets/Materials/Short_tunnel
-MRUItem13=/Game/GameAssets/Materials/Short_Half_Tunnel
-MRUItem14=/Game/GameAssets/Materials/Short_Circle_tunnel
-MRUItem15=/Game/GameAssets/Materials/Large_Tunnel_Circle
-MRUItem16=/Game/GameAssets/Materials/Large_Tunnel
-MRUItem17=/Game/GameAssets/Materials/Large_T_Circle
-MRUItem18=/Game/GameAssets/Materials/Bars
-MRUItem19=/Game/GameAssets/Materials/90_Tunnel
-MRUItem20=/Game/GameAssets/Materials/4-Way-Intersection
-MRUItem21=/Game/GameAssets/Models/Small_Tunnels_Small_T_Intersection_Tunnel
-MRUItem22=/Game/GameAssets/Models/Small_Tunnels_Small_Short_Tunnel_DE
-MRUItem23=/Game/GameAssets/Models/Small_Tunnels_Small_Short_Tunnel
-MRUItem24=/Game/GameAssets/Models/Small_Tunnels_Small_Long_Tunnel_DE
-MRUItem25=/Game/GameAssets/Models/Small_Tunnels_Small_Long_Tunnel
-MRUItem26=/Game/GameAssets/Models/Small_Tunnels_Small_90_Tunnel_Barred
-MRUItem27=/Game/GameAssets/Models/Small_Tunnels_Small_90_Tunnel
-MRUItem28=/Game/GameAssets/Models/Small_Tunnels_Small_4-Way_Intersection_tunnel
-MRUItem29=/Game/GameAssets/Models/Small_Tunnels_Small_2xLong_Tunnel
+MRUItem0=/Game/GameAssets/Models/monster_mesh
+MRUItem1=/Game/GameAssets/Animations/Whiteclown_N_Hallin_Skeleton
+MRUItem2=/Game/GameAssets/Animations/Whiteclown_N_Hallin
+MRUItem3=/Game/GameAssets/Models/monsterlow_poly
+MRUItem4=/Game/GameAssets/Models/Monster_Eye
+MRUItem5=/Game/GameAssets/Models/Monster_Skin
+MRUItem6=/Game/GameAssets/Level/SewerLevel
+MRUItem7=/Game/GameAssets/Materials/Large_T
+MRUItem8=/Game/GameAssets/Models/Large_Tunnel_Segments_Large_Tunnel_poly_001
+MRUItem9=/Game/GameAssets/Models/Large_Tunnel_Segments_Large_Tunnel_poly
+MRUItem10=/Game/GameAssets/Models/Large_Tunnel_Segments_Large_T_Intersection_Tunnel_Circle
+MRUItem11=/Game/GameAssets/Models/Large_Tunnel_Segments_Large_T_Intersection_Tunnel
+MRUItem12=/Game/GameAssets/Models/Large_Tunnel_Segments_Large_Short_Tunnel_Circle
+MRUItem13=/Game/GameAssets/Models/Large_Tunnel_Segments_Large_Short_Tunnel
+MRUItem14=/Game/GameAssets/Models/Large_Tunnel_Segments_Large_HalfShort_Tunnel
+MRUItem15=/Game/GameAssets/Models/Large_Tunnel_Segments_Large_Bars_poly
+MRUItem16=/Game/GameAssets/Models/Large_Tunnel_Segments_Large_90_Tunnel
+MRUItem17=/Game/GameAssets/Models/Large_Tunnel_Segments_4-Way_Large_Intersection_Segment
+MRUItem18=/Game/GameAssets/Models/Bars
+MRUItem19=/Game/GameAssets/Materials/Short_tunnel
+MRUItem20=/Game/GameAssets/Materials/Short_Half_Tunnel
+MRUItem21=/Game/GameAssets/Materials/Short_Circle_tunnel
+MRUItem22=/Game/GameAssets/Materials/Large_Tunnel_Circle
+MRUItem23=/Game/GameAssets/Materials/Large_Tunnel
+MRUItem24=/Game/GameAssets/Materials/Large_T_Circle
+MRUItem25=/Game/GameAssets/Materials/Bars
+MRUItem26=/Game/GameAssets/Materials/90_Tunnel
+MRUItem27=/Game/GameAssets/Materials/4-Way-Intersection
+MRUItem28=/Game/GameAssets/Models/Small_Tunnels_Small_T_Intersection_Tunnel
+MRUItem29=/Game/GameAssets/Models/Small_Tunnels_Small_Short_Tunnel_DE
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -1606,7 +1610,7 @@ NavMeshBoundsVolume.Actor=True
 NavMeshBoundsVolume.WorldPartition=True
 StaticMesh.StaticMeshMaterials=True
 StaticMesh.NaniteSettings=True
-StaticMesh.LODCustomMode=False
+StaticMesh.LODCustomMode=True
 StaticMesh.LOD0=True
 StaticMesh.LodSettings=True
 StaticMesh.StaticMesh=True
@@ -2202,6 +2206,13 @@ ABP_Manny_C.Montage=True
 MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
 MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
 MaterialExpressionTextureSample.MaterialExpression=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionVectorParameter.CustomPrimitiveData=True
+MaterialExpressionVectorParameter.ParameterCustomization=True
+BoneProxy.Bone=True
+BoneProxy.Transforms=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2319,7 +2330,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=FBXImport
 
 [PlacementMode]
 RecentlyPlaced=/Game/GameAssets/Models/Manhole_Cover.Manhole_Cover;
@@ -2400,6 +2411,9 @@ RecentlyPlaced=/Game/GameAssets/Models/Small_Tunnels_Small_Short_Tunnel.Small_Tu
 /Game/GameAssets/Materials/4-Way-Intersection.4-Way-Intersection=1
 /Game/GameAssets/Models/Large_Tunnel_Segments_Large_HalfShort_Tunnel.Large_Tunnel_Segments_Large_HalfShort_Tunnel=1
 /Game/GameAssets/Models/Bars.Bars=1
+/Game/GameAssets/Models/Monster_Eye.Monster_Eye=1
+/Game/GameAssets/Models/Monster_Skin.Monster_Skin=1
+/Game/GameAssets/Animations/Whiteclown_N_Hallin.Whiteclown_N_Hallin=1
 
 [DetailCategoriesAdvanced]
 FbxImportUI.Material=False
@@ -2410,6 +2424,7 @@ CharacterMovementComponent.Character Movement (Networking)=False
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [MaterialEditor]
 PrimType=1
